[tool.poetry]
name = "sqlmodel-tutorial"
version = "0.1.0"
description = ""
authors = ["Pavel Vergeev <vernier_06_curios@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
